--- a/MedicineDirectoryMobileApp/MedicineDirectoryMobileApp/ProductCategoryPage.xaml
+++ b/MedicineDirectoryMobileApp/MedicineDirectoryMobileApp/ProductCategoryPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              Title="Medicine Categories"
-             BackgroundColor="#0F0F1E"
+             BackgroundColor="#EEE"
              x:Class="MedicineDirectoryMobileApp.ProductCategoryPage">
 
     <ContentPage.Content>
